--- a/src/main/resources/static/signUpRecrutador.html
+++ b/src/main/resources/static/signUpRecrutador.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-  <title>RH Fast</title>
+  <title>RH Fast - Cadastro Recrutador</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,7 @@
       <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
         <form class="login100-form validate-form">
           <span class="login100-form-title p-b-49">
-            Cadastro
+            Cadastro Recrutador
           </span>
 
           <div class="row">
@@ -134,7 +134,7 @@
   </div>
 
   <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.8/jquery.inputmask.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
   <script src="vendor/bootstrap/js/popper.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="js/signUpRecrutador.js"></script>
