--- a/src/main/resources/static/mainRecrutador.html
+++ b/src/main/resources/static/mainRecrutador.html
@@ -58,7 +58,7 @@
                                 <thead>
                                     <tr>
                                         <th>Título</th>
-                                        <th>Setor</th>
+                                        <th>Candidatos</th>
                                         <th>Status</th>
                                         <th>Ações</th>
                                     </tr>
@@ -106,41 +106,6 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                     <button type="button" class="btn btn-primary" id="btnEditarModal">Editar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal Candidatos -->
-    <div class="modal fade" id="candidatosModal" tabindex="-1" role="dialog" aria-labelledby="candidatosModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="candidatosModalLabel">Candidatos Inscritos</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="table-responsive">
-                        <table class="table table-striped" id="tabelaCandidatos">
-                            <thead>
-                                <tr>
-                                    <th>Nome</th>
-                                    <th>Email</th>
-                                    <th>Telefone</th>
-                                    <th>Data Inscrição</th>
-                                    <th>Status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Conteúdo carregado via JS -->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                 </div>
             </div>
         </div>
