feat: aba Minhas Candidaturas do usuário Candidato

--- a/src/main/resources/static/mainCandidato.html
+++ b/src/main/resources/static/mainCandidato.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="#">Vagas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Minhas Candidaturas</a>
+                        <a class="nav-link" href="minhasCandidaturas.html">Minhas Candidaturas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Perfil</a>
