feat: aba Perfil do usuário Candidato

--- a/src/main/resources/static/mainCandidato.html
+++ b/src/main/resources/static/mainCandidato.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="minhasCandidaturas.html">Minhas Candidaturas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Perfil</a>
+                        <a class="nav-link" href="perfilCandidato.html">Perfil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Sair</a>
