fix: corrigido o bug de atualização de vaga, dataPostagem

--- a/src/main/resources/static/editarVaga.html
+++ b/src/main/resources/static/editarVaga.html
@@ -109,7 +109,7 @@
                                         <label for="status">Status</label>
                                         <select class="form-control" id="status" name="status" required>
                                             <option value="ABERTA">Aberta</option>
-                                            <option value="FECHADA">Fechada</option>
+                                            <option value="ENCERRADA">Encerrada</option>
                                             <option value="CANCELADA">Cancelada</option>
                                         </select>
                                     </div>
